k8s/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: eureka-server

spec:
  replicas: 1

  selector:
    matchLabels:
      app: eureka-server

  template:
    metadata:
      labels:
        app: eureka-server

    spec:
      containers:
        - name: eureka-server
          image: k8s-eureka-server:1.0
          ports:
            - containerPort: 8761
