k8s/mysql-order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql-order

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql-order

  template:
    metadata:
      labels:
        app: mysql-order

    spec:
      containers:
        - name: mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: order-mysql-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: order-mysql-storage
          persistentVolumeClaim:
            claimName: order-mysql-pvc
