k8s/mysql-product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql-product

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql-product

  template:
    metadata:
      labels:
        app: mysql-product

    spec:
      containers:[
        - name: mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306
