k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service
          image: k8s-product-service:1.1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8081
