k8s/eureka-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: eureka-service

spec:
  type: NodePort

  selector:
    app: eureka-server

  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30001
