k8s/mysql-order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-mysql

spec:
  selector:
    app: mysql-order

  ports:
    - port: 3306
      targetPort: 3306
