k8s/mysql-product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-mysql

spec:
  selector:
    app: mysql-product

  ports:
    - port: 3306
      targetPort: 3306
