k8s/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service

spec:
  type: NodePort

  selector:
    app: order-service

  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30003
