k8s/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  type: NodePort

  selector:
    app: product-service

  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30002
