k8s/envoy-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-route
spec:
  parentRefs:
    - name: my-envoy-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /products
      backendRefs:
        - name: product-service
          port: 8081

    - matches:
        - path:
            type: PathPrefix
            value: /orders
      backendRefs:
        - name: order-service
          port: 8082
